added db health indicator

--- a/HeroManager/src/main/resources/application.yml
+++ b/HeroManager/src/main/resources/application.yml
@@ -27,6 +27,9 @@ server:
   address: 0.0.0.0
 
 management:
+  endpoint:
+    health:
+      show-details: always
   endpoints:
     web:
       exposure:
