auth server: data model + repo

--- a/AuthServer/build.gradle
+++ b/AuthServer/build.gradle
@@ -26,8 +26,7 @@ dependencies {
     implementation("io.micronaut.security:micronaut-security-jwt")
     implementation("io.micronaut.serde:micronaut-serde-jackson")
     implementation("io.micronaut.sql:micronaut-jdbc-hikari")
-    implementation("org.mybatis:mybatis:3.5.10")
-    implementation("org.mybatis:mybatis-spring:2.0.7")
+    implementation("io.micronaut.data:micronaut-data-jdbc")
     implementation("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     compileOnly("io.micronaut:micronaut-http-client")
