--- a/AuthServer/src/main/resources/application-dev.properties
+++ b/AuthServer/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-datasources.default.jdbc-url=jdbc:h2:mem:devDb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+datasources.default.jdbc-url=jdbc:h2:mem:authDb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 datasources.default.driver-class-name=org.h2.Driver
 datasources.default.username=sa
 datasources.default.password=
