auth server: repackaging

--- a/AuthServer/src/main/resources/application.properties
+++ b/AuthServer/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #Tue Jun 25 12:14:39 UTC 2024
 flyway.datasources.default.enabled=true
 micronaut.security.token.jwt.signatures.secret.generator.secret=${JWT_GENERATOR_SIGNATURE_SECRET\:pleaseChangeThisSecretForANewOne}
+micronaut.security.token.jwt.generator.refresh-token.secret="${JWT_GENERATOR_SIGNATURE_SECRET:pleaseChangeThisSecretForANewOne}"'
 micronaut.router.static-resources.swagger.paths=classpath\:META-INF/swagger
 datasources.default.db-type=mysql
 micronaut.application.name=authserver
