--- a/AuthServer/src/main/resources/application.properties
+++ b/AuthServer/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 #Tue Jun 25 12:14:39 UTC 2024
 flyway.datasources.default.enabled=true
+
 micronaut.security.token.jwt.signatures.secret.generator.secret=${JWT_GENERATOR_SIGNATURE_SECRET\:pleaseChangeThisSecretForANewOne}
 micronaut.security.token.jwt.generator.refresh-token.secret="${JWT_GENERATOR_SIGNATURE_SECRET:pleaseChangeThisSecretForANewOne}"'
+micronaut.security.token.jwt.generator.refresh-token.enabled=true
+micronaut.security.authentication=bearer
+
 micronaut.router.static-resources.swagger.paths=classpath\:META-INF/swagger
 datasources.default.db-type=mysql
 micronaut.application.name=authserver
@@ -11,6 +15,5 @@ micronaut.security.intercept-url-map[0].access=isAnonymous()
 micronaut.router.static-resources.swagger.mapping=/swagger/**
 micronaut.security.intercept-url-map[0].pattern=/swagger/**
 micronaut.router.static-resources.swagger-ui.mapping=/swagger-ui/**
-micronaut.security.authentication=bearer
 micronaut.router.static-resources.swagger-ui.paths=classpath\:META-INF/swagger/views/swagger-ui
 micronaut.security.intercept-url-map[1].access=isAnonymous()
