--- a/AuthServer/src/main/resources/application.properties
+++ b/AuthServer/src/main/resources/application.properties
@@ -5,6 +5,7 @@ micronaut.security.token.jwt.signatures.secret.generator.secret=${JWT_GENERATOR_
 micronaut.security.token.jwt.generator.refresh-token.secret="${JWT_GENERATOR_SIGNATURE_SECRET:pleaseChangeThisSecretForANewOne}"'
 micronaut.security.token.jwt.generator.refresh-token.enabled=true
 micronaut.security.authentication=bearer
+micronaut.security.token.generator.access-token.expiration=600
 
 micronaut.router.static-resources.swagger.paths=classpath\:META-INF/swagger
 datasources.default.db-type=mysql
