auth server: use custom login path

--- a/AuthServer/src/main/resources/application.properties
+++ b/AuthServer/src/main/resources/application.properties
@@ -6,6 +6,7 @@ micronaut.security.token.jwt.generator.refresh-token.secret="${JWT_GENERATOR_SIG
 micronaut.security.token.jwt.generator.refresh-token.enabled=true
 micronaut.security.authentication=bearer
 micronaut.security.token.generator.access-token.expiration=600
+micronaut.security.endpoints.login.path=/v1/user/login
 
 micronaut.router.static-resources.swagger.paths=classpath\:META-INF/swagger
 datasources.default.db-type=mysql
