auth server: refresh token fully working

--- a/AuthServer/build.gradle
+++ b/AuthServer/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     implementation("org.mindrot:jbcrypt:0.4")
+    implementation("io.projectreactor:reactor-core:3.6.7")
     compileOnly("io.micronaut:micronaut-http-client")
     compileOnly("io.micronaut.openapi:micronaut-openapi-annotations")
     runtimeOnly("ch.qos.logback:logback-classic")
