--- a/AuthServer/src/main/resources/application.properties
+++ b/AuthServer/src/main/resources/application.properties
@@ -7,6 +7,9 @@ micronaut.security.token.jwt.generator.refresh-token.enabled=true
 micronaut.security.authentication=bearer
 micronaut.security.token.generator.access-token.expiration=600
 micronaut.security.endpoints.login.path=/v1/user/login
+micronaut.security.endpoints.oauth.enabled=true
+micronaut.security.endpoints.oauth.get-allowed=true
+micronaut.security.endpoints.oauth.path= /v1/auth/refresh
 
 micronaut.router.static-resources.swagger.paths=classpath\:META-INF/swagger
 datasources.default.db-type=mysql
