auth server: db config fix

--- a/AuthServer/src/main/resources/application-mysql.properties
+++ b/AuthServer/src/main/resources/application-mysql.properties
@@ -1,3 +1,4 @@
 datasources.default.jdbc-url=jdbc:mysql://localhost:3306/authDb
 datasources.default.username=auth
 datasources.default.password=auth123
+datasources.default.driver-class-name=com.mysql.cj.jdbc.Driver
