--- a/AuthServer/src/main/resources/application-dev.properties
+++ b/AuthServer/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
-datasources.default.jdbc-url=jdbc:h2:mem:authDb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-datasources.default.driver-class-name=org.h2.Driver
-datasources.default.username=sa
-datasources.default.password=
+datasources.dev.jdbc-url=jdbc:h2:mem:authDb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+datasources.dev.driver-class-name=org.h2.Driver
+datasources.dev.username=sa
+datasources.dev.password=
 
