--- a/AuthServer/gradle.properties
+++ b/AuthServer/gradle.properties
@@ -1,2 +1,6 @@
 micronautVersion=4.5.0
 kotlinVersion=1.9.23
+imageName=abondar/authserver
+imageArch=arm64
+dockerhubUser=${DOCKER_USER}
+dockerhubPass=${DOCKER_PASSWORD}
