auth server: gradle clean up

--- a/AuthServer/gradle.properties
+++ b/AuthServer/gradle.properties
@@ -1,6 +1,11 @@
-micronautVersion=4.5.0
+micronautVersion=4.4.0
 kotlinVersion=1.9.23
+shadowVersion=8.1.1
+jibVersion=3.3.1
+brcyptVersion=0.4
+reactorVersion=3.6.7
+
 imageName=abondar/authserver
-imageArch=arm64
+imageArch=amd64
 dockerhubUser=${DOCKER_USER}
 dockerhubPass=${DOCKER_PASSWORD}
