--- a/AuthServer/build.gradle
+++ b/AuthServer/build.gradle
@@ -1,5 +1,3 @@
-import io.micronaut.gradle.docker.NativeImageDockerfile
-
 buildscript {
     dependencies {
         classpath('com.google.cloud.tools:jib-native-image-extension-gradle:0.1.0')
@@ -7,14 +5,14 @@ buildscript {
 }
 
 plugins {
-    id("org.jetbrains.kotlin.jvm") version "1.9.23"
-    id("org.jetbrains.kotlin.kapt") version "1.9.23"
-    id("org.jetbrains.kotlin.plugin.allopen") version "1.9.23"
-    id("com.github.johnrengelman.shadow") version "8.1.1"
-    id("io.micronaut.application") version "4.4.0"
-    id("io.micronaut.test-resources") version "4.4.0"
-    id("io.micronaut.aot") version "4.4.0"
-    id("com.google.cloud.tools.jib") version "3.3.1"
+    id("org.jetbrains.kotlin.jvm") version "$kotlinVersion"
+    id("org.jetbrains.kotlin.kapt") version "$kotlinVersion"
+    id("org.jetbrains.kotlin.plugin.allopen") version "$kotlinVersion"
+    id("com.github.johnrengelman.shadow") version "$shadowVersion"
+    id("io.micronaut.application") version "$micronautVersion"
+    id("io.micronaut.test-resources") version "$micronautVersion"
+    id("io.micronaut.aot") version "$micronautVersion"
+    id("com.google.cloud.tools.jib") version "$jibVersion"
 }
 
 version = "1.0"
@@ -40,8 +38,8 @@ dependencies {
 
     implementation("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
-    implementation("org.mindrot:jbcrypt:0.4")
-    implementation("io.projectreactor:reactor-core:3.6.7")
+    implementation("org.mindrot:jbcrypt:$brcyptVersion")
+    implementation("io.projectreactor:reactor-core:$reactorVersion")
     compileOnly("io.micronaut:micronaut-http-client")
     compileOnly("io.micronaut.openapi:micronaut-openapi-annotations")
     runtimeOnly("ch.qos.logback:logback-classic")
@@ -52,7 +50,7 @@ dependencies {
     testImplementation("io.micronaut.test:micronaut-test-rest-assured")
     testImplementation("io.micronaut.test:micronaut-test-junit5")
     testImplementation("org.mockito:mockito-core")
-    aotPlugins platform("io.micronaut.platform:micronaut-platform:4.5.0")
+    aotPlugins platform("io.micronaut.platform:micronaut-platform:$micronautVersion")
     aotPlugins("io.micronaut.security:micronaut-security-aot")
 }
 
