auth server: added health endpoint with data

--- a/AuthServer/src/main/resources/application.properties
+++ b/AuthServer/src/main/resources/application.properties
@@ -21,3 +21,5 @@ micronaut.security.intercept-url-map[0].pattern=/swagger/**
 micronaut.router.static-resources.swagger-ui.mapping=/swagger-ui/**
 micronaut.router.static-resources.swagger-ui.paths=classpath\:META-INF/swagger/views/swagger-ui
 micronaut.security.intercept-url-map[1].access=isAnonymous()
+endpoints.health.disk-space.enabled=true
+endpoints.health.details-visible=anonymous
