--- a/AuthServer/src/main/resources/application-docker.properties
+++ b/AuthServer/src/main/resources/application-docker.properties
@@ -1,4 +1,5 @@
-datasources.default.jdbc-url=jdbc:mysql://${DB_AUTH_HOST}:3306/authDb
+datasources.default.jdbc-url=jdbc:mysql://${DB_AUTH_HOST}:${DB_AUTH_PORT}/authdb
 datasources.default.driver-class-name=com.mysql.cj.jdbc.Driver
 datasources.default.username=${DB_AUTH_USER}
 datasources.default.password=${DB_AUTH_PASSWORD}
+micronaut.server.context-path=/authserver
