--- a/HeroManager/src/main/resources/application-docker.yml
+++ b/HeroManager/src/main/resources/application-docker.yml
@@ -1,3 +1,7 @@
+server:
+  servlet:
+    context-path: /heromanager
+
 spring:
  datasource:
     url: jdbc:mysql://${DB_HOST}:3306/herodb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
