--- a/AuthServer/openapi.properties
+++ b/AuthServer/openapi.properties
@@ -5,3 +5,6 @@ rapidoc.enabled=false
 rapidoc.bg-color=#14191f
 rapidoc.text-color=#aec2e0
 rapidoc.sort-endpoints-by=method
+
+endpoints.enabled=true
+endpoints.tags=Management Endpoints
