--- a/AuthServer/src/main/resources/application.properties
+++ b/AuthServer/src/main/resources/application.properties
@@ -11,15 +11,20 @@ micronaut.security.endpoints.oauth.enabled=true
 micronaut.security.endpoints.oauth.get-allowed=true
 micronaut.security.endpoints.oauth.path= /v1/auth/refresh
 
-micronaut.router.static-resources.swagger.paths=classpath\:META-INF/swagger
 datasources.default.db-type=mysql
 micronaut.application.name=authserver
+
 micronaut.security.intercept-url-map[1].pattern=/swagger-ui/**
-micronaut.security.intercept-url-map[0].access=isAnonymous()
-micronaut.router.static-resources.swagger.mapping=/swagger/**
+micronaut.security.intercept-url-map[1].access=isAnonymous()
 micronaut.security.intercept-url-map[0].pattern=/swagger/**
+micronaut.security.intercept-url-map[0].access=isAnonymous()
+
+micronaut.router.static-resources.swagger.mapping=/swagger/**
+micronaut.router.static-resources.swagger.paths=classpath\:META-INF/swagger
+
 micronaut.router.static-resources.swagger-ui.mapping=/swagger-ui/**
 micronaut.router.static-resources.swagger-ui.paths=classpath\:META-INF/swagger/views/swagger-ui
-micronaut.security.intercept-url-map[1].access=isAnonymous()
+
 endpoints.health.disk-space.enabled=true
 endpoints.health.details-visible=anonymous
+endpoints.routes.enabled=true
