--- a/HeroManager/build.gradle
+++ b/HeroManager/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.springframework.boot:spring-boot-starter-actuator")
     implementation("org.springframework.boot:spring-boot-starter-validation")
+    implementation("org.springframework.boot:spring-boot-starter-cache")
+    implementation("org.springframework.boot:spring-boot-starter-data-redis")
 
     implementation("org.flywaydb:flyway-core:$flywayVersion")
     implementation("org.flywaydb:flyway-mysql:$flywayVersion")
@@ -31,8 +33,8 @@ dependencies {
     implementation ("io.micrometer:micrometer-core")
     implementation("com.mysql:mysql-connector-j:$mysqlVersion")
     implementation ("net.logstash.logback:logstash-logback-encoder:$encoderVersion")
-    implementation("org.springframework.boot:spring-boot-starter-cache")
     implementation("com.github.ben-manes.caffeine:caffeine")
+    implementation("redis.clients:jedis")
     runtimeOnly("com.h2database:h2")
 
     testImplementation("org.springframework.boot:spring-boot-starter-test")
