--- a/HeroManager/src/main/resources/application.yml
+++ b/HeroManager/src/main/resources/application.yml
@@ -34,3 +34,8 @@ management:
     web:
       exposure:
         include: health, info, env, metrics
+
+redis:
+  hostname: localhost
+  port: 6379
+  password:
