--- a/AuthServer/src/main/resources/application-dev.properties
+++ b/AuthServer/src/main/resources/application-dev.properties
@@ -2,4 +2,4 @@ datasources.dev.jdbc-url=jdbc:h2:mem:authDb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=F
 datasources.dev.driver-class-name=org.h2.Driver
 datasources.dev.username=sa
 datasources.dev.password=
-
+micronaut.server.port=8081
