--- a/HeroManager/build.gradle
+++ b/HeroManager/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-validation")
     implementation("org.springframework.boot:spring-boot-starter-cache")
     implementation("org.springframework.boot:spring-boot-starter-data-redis")
+    implementation("org.springframework.boot:spring-boot-starter-webflux")
 
     implementation("org.flywaydb:flyway-core:$flywayVersion")
     implementation("org.flywaydb:flyway-mysql:$flywayVersion")
@@ -41,6 +42,7 @@ dependencies {
 
     testImplementation("org.testcontainers:junit-jupiter:$testConVersion")
     testImplementation("org.testcontainers:mysql:$testConVersion")
+    testImplementation("io.projectreactor:reactor-test")
 
 }
 
