--- a/HeroManager/dev.env
+++ b/HeroManager/dev.env
@@ -1,3 +1,8 @@
 DB_HOST=localhost
 DB_USERNAME=hero
 DB_PASSWORD=hero123
+DB_PORT=3306
+REDIS_HOST=localhost
+REDIS_PASSWORD=
+AUTH_SRV_HOST=http://localhost
+AUTH_SRV_PORT=8081
