--- a/HeroManager/src/main/resources/application-docker.yml
+++ b/HeroManager/src/main/resources/application-docker.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
  datasource:
-    url: jdbc:mysql://${DB_HOST}:3306/herodb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://${DB_HOST}:${DB_PORT}/herodb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
 
@@ -17,3 +17,7 @@ management:
 redis:
   hostname: ${REDIS_HOST}
   password: ${REDIS_PASSWORD}
+
+
+auth-server:
+  host: ${AUTH_SRV_HOST}:${AUTH_SRV_PORT}
