--- a/HeroManager/src/main/resources/application.yml
+++ b/HeroManager/src/main/resources/application.yml
@@ -39,3 +39,8 @@ redis:
   hostname: localhost
   port: 6379
   password:
+
+auth-server:
+   host: http://localhost:8081
+   auth-url: /v1/auth
+   health-url: /health
