extended ITest, fixed related issues with redis and auth

--- a/HeroManager/src/main/resources/application-dev.yml
+++ b/HeroManager/src/main/resources/application-dev.yml
@@ -11,4 +11,13 @@ h2:
     path: /h2
 
 auth:
-  enabled: false
+  enabled: true
+
+
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
+        web:
+          cors: DEBUG
