added openapi config

--- a/HeroManager/src/main/resources/application-dev.yml
+++ b/HeroManager/src/main/resources/application-dev.yml
@@ -11,13 +11,4 @@ h2:
     path: /h2
 
 auth:
-  enabled: true
-
-
-logging:
-  level:
-    org:
-      springframework:
-        security: DEBUG
-        web:
-          cors: DEBUG
+  enabled: false
