--- a/HeroManager/dev.env
+++ b/HeroManager/dev.env
@@ -3,6 +3,7 @@ DB_USERNAME=hero
 DB_PASSWORD=hero123
 DB_PORT=3306
 REDIS_HOST=localhost
+REDIS_PORT=6379
 REDIS_PASSWORD=
 AUTH_SRV_HOST=http://localhost
 AUTH_SRV_PORT=8081
