fix hero mapping

--- a/HeroManager/src/main/resources/application-dev.yml
+++ b/HeroManager/src/main/resources/application-dev.yml
@@ -1,9 +1,11 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:herodb
+    url: jdbc:h2:mem:herodb;MODE=MySQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     driver-class-name: org.h2.Driver
     username: sa
     password:
+  cache:
+    type: none
 
 h2:
   console:
@@ -12,3 +14,9 @@ h2:
 
 auth:
   enabled: false
+
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
